assignment1/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "NOT", "AND", "OR", "DEQ", "NEQ", 
                      "LT", "LE", "GT", "GE", "DC", "LB", "RB", "LSB", "RSB", 
                      "DOT", "CM", "SM", "CL", "LP", "RP", "EQ", "ID", "INTLIT", 
                      "POSINTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", 
                      "LINE_CMT", "BLOCK_CMT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declare_list = 1
    RULE_declare = 2
    RULE_var_declare = 3
    RULE_short_form = 4
    RULE_identifier_list = 5
    RULE_init_var = 6
    RULE_pair = 7
    RULE_parameter_list_declare_infunc = 8
    RULE_parameter_list_declare = 9
    RULE_parameter_declare = 10
    RULE_func_declare = 11
    RULE_typedecl = 12
    RULE_atomic_type = 13
    RULE_array_type = 14
    RULE_dimension = 15
    RULE_void_type = 16
    RULE_auto_type = 17
    RULE_exp = 18
    RULE_exp1 = 19
    RULE_relational = 20
    RULE_exp2 = 21
    RULE_logical = 22
    RULE_exp3 = 23
    RULE_adding = 24
    RULE_exp4 = 25
    RULE_multiplying = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_exp7 = 29
    RULE_index_operator = 30
    RULE_exp_list_array = 31
    RULE_operands = 32
    RULE_function_call = 33
    RULE_statement = 34
    RULE_assign_statement = 35
    RULE_scalar_assign_statement = 36
    RULE_index_operator_statement = 37
    RULE_if_statement = 38
    RULE_for_statement = 39
    RULE_scalar_init_expr = 40
    RULE_condition_expr = 41
    RULE_update_expr = 42
    RULE_while_statement = 43
    RULE_do_while_statement = 44
    RULE_break_statement = 45
    RULE_continue_statement = 46
    RULE_return_statement = 47
    RULE_call_statement = 48
    RULE_exp_list_call = 49
    RULE_block_statement = 50
    RULE_statement_list = 51
    RULE_arraylit = 52

    ruleNames =  [ "program", "declare_list", "declare", "var_declare", 
                   "short_form", "identifier_list", "init_var", "pair", 
                   "parameter_list_declare_infunc", "parameter_list_declare", 
                   "parameter_declare", "func_declare", "typedecl", "atomic_type", 
                   "array_type", "dimension", "void_type", "auto_type", 
                   "exp", "exp1", "relational", "exp2", "logical", "exp3", 
                   "adding", "exp4", "multiplying", "exp5", "exp6", "exp7", 
                   "index_operator", "exp_list_array", "operands", "function_call", 
                   "statement", "assign_statement", "scalar_assign_statement", 
                   "index_operator_statement", "if_statement", "for_statement", 
                   "scalar_init_expr", "condition_expr", "update_expr", 
                   "while_statement", "do_while_statement", "break_statement", 
                   "continue_statement", "return_statement", "call_statement", 
                   "exp_list_call", "block_statement", "statement_list", 
                   "arraylit" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONTINUE=18
    OF=19
    INHERIT=20
    ARRAY=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    NOT=27
    AND=28
    OR=29
    DEQ=30
    NEQ=31
    LT=32
    LE=33
    GT=34
    GE=35
    DC=36
    LB=37
    RB=38
    LSB=39
    RSB=40
    DOT=41
    CM=42
    SM=43
    CL=44
    LP=45
    RP=46
    EQ=47
    ID=48
    INTLIT=49
    POSINTLIT=50
    FLOATLIT=51
    BOOLEANLIT=52
    STRINGLIT=53
    LINE_CMT=54
    BLOCK_CMT=55
    WS=56
    ERROR_CHAR=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_list(self):
            return self.getTypedRuleContext(MT22Parser.Declare_listContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.declare_list()
            self.state = 107
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self):
            return self.getTypedRuleContext(MT22Parser.DeclareContext,0)


        def declare_list(self):
            return self.getTypedRuleContext(MT22Parser.Declare_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declare_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_list" ):
                return visitor.visitDeclare_list(self)
            else:
                return visitor.visitChildren(self)




    def declare_list(self):

        localctx = MT22Parser.Declare_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declare_list)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.declare()
                self.state = 110
                self.declare_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(MT22Parser.Var_declareContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(MT22Parser.Func_declareContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = MT22Parser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.var_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.func_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def short_form(self):
            return self.getTypedRuleContext(MT22Parser.Short_formContext,0)


        def init_var(self):
            return self.getTypedRuleContext(MT22Parser.Init_varContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = MT22Parser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declare)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.short_form()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.init_var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Short_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typedecl(self):
            return self.getTypedRuleContext(MT22Parser.TypedeclContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_short_form

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShort_form" ):
                return visitor.visitShort_form(self)
            else:
                return visitor.visitChildren(self)




    def short_form(self):

        localctx = MT22Parser.Short_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_short_form)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.identifier_list()
            self.state = 124
            self.match(MT22Parser.CL)
            self.state = 125
            self.typedecl()
            self.state = 126
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifier_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_list" ):
                return visitor.visitIdentifier_list(self)
            else:
                return visitor.visitChildren(self)




    def identifier_list(self):

        localctx = MT22Parser.Identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifier_list)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(MT22Parser.ID)
                self.state = 129
                self.match(MT22Parser.CM)
                self.state = 130
                self.identifier_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def pair(self):
            return self.getTypedRuleContext(MT22Parser.PairContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_init_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_var" ):
                return visitor.visitInit_var(self)
            else:
                return visitor.visitChildren(self)




    def init_var(self):

        localctx = MT22Parser.Init_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_init_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(MT22Parser.ID)
            self.state = 135
            self.pair()
            self.state = 136
            self.exp()
            self.state = 137
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def pair(self):
            return self.getTypedRuleContext(MT22Parser.PairContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typedecl(self):
            return self.getTypedRuleContext(MT22Parser.TypedeclContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_pair

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = MT22Parser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pair)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(MT22Parser.CM)
                self.state = 140
                self.match(MT22Parser.ID)
                self.state = 141
                self.pair()
                self.state = 142
                self.exp()
                self.state = 143
                self.match(MT22Parser.CM)
                pass
            elif token in [MT22Parser.CL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(MT22Parser.CL)
                self.state = 146
                self.typedecl()
                self.state = 147
                self.match(MT22Parser.EQ)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_list_declare_infuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def parameter_list_declare(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_list_declareContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_list_declare_infunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list_declare_infunc" ):
                return visitor.visitParameter_list_declare_infunc(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list_declare_infunc(self):

        localctx = MT22Parser.Parameter_list_declare_infuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter_list_declare_infunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MT22Parser.LB)
            self.state = 152
            self.parameter_list_declare()
            self.state = 153
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_list_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declare(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_declareContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def parameter_list_declare(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_list_declareContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_list_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list_declare" ):
                return visitor.visitParameter_list_declare(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list_declare(self):

        localctx = MT22Parser.Parameter_list_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_list_declare)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.parameter_declare()
                self.state = 156
                self.match(MT22Parser.CM)
                self.state = 157
                self.parameter_list_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.parameter_declare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typedecl(self):
            return self.getTypedRuleContext(MT22Parser.TypedeclContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declare" ):
                return visitor.visitParameter_declare(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declare(self):

        localctx = MT22Parser.Parameter_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_declare)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(MT22Parser.ID)
                self.state = 164
                self.match(MT22Parser.CL)
                self.state = 165
                self.typedecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(MT22Parser.INHERIT)
                self.state = 167
                self.match(MT22Parser.ID)
                self.state = 168
                self.match(MT22Parser.CL)
                self.state = 169
                self.typedecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.match(MT22Parser.OUT)
                self.state = 171
                self.match(MT22Parser.ID)
                self.state = 172
                self.match(MT22Parser.CL)
                self.state = 173
                self.typedecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 174
                self.match(MT22Parser.INHERIT)
                self.state = 175
                self.match(MT22Parser.OUT)
                self.state = 176
                self.match(MT22Parser.ID)
                self.state = 177
                self.match(MT22Parser.CL)
                self.state = 178
                self.typedecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def typedecl(self):
            return self.getTypedRuleContext(MT22Parser.TypedeclContext,0)


        def parameter_list_declare_infunc(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_list_declare_infuncContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(MT22Parser.Block_statementContext,0)


        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_func_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declare" ):
                return visitor.visitFunc_declare(self)
            else:
                return visitor.visitChildren(self)




    def func_declare(self):

        localctx = MT22Parser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_declare)
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(MT22Parser.ID)
                self.state = 182
                self.match(MT22Parser.CL)
                self.state = 183
                self.match(MT22Parser.FUNCTION)
                self.state = 184
                self.typedecl()
                self.state = 185
                self.parameter_list_declare_infunc()

                self.state = 186
                self.match(MT22Parser.LSB)
                self.state = 187
                self.match(MT22Parser.INHERIT)
                self.state = 188
                self.match(MT22Parser.ID)
                self.state = 189
                self.match(MT22Parser.RSB)
                self.state = 191
                self.block_statement()
                pass
